<resources>
    <string name="app_name">Rosie the Riveter National Park</string>
    <string name="action_settings">Settings</string>
    <string name="rosie_full_name">Rosie the Riveter/WWII Home Front National Historical Park</string>
    <string name="sites">Sites</string>
    <string name="photo_gallery">Album</string>
    <string name="shipyard_map">Shipyards</string>
    <string name="about">About</string>
    <string name="full_name_part1">Rosie the Riveter/WWII Home Front</string>
    <string name="full_name_part2">National Historic Park</string>
    <string name="prev">Tap for previous</string>
    <string name="next">Tap for next</string>
    <string name="swipe">Swipe to see more</string>
    <string name="no_more_photos">No More photos.</string>
    <string name="no_previous_photos">No Previous photos.</string>
    <string name="track_me">Show my location</string>
    <string name="shipyard_2_3">Kaiser Shipyards: then &amp; now </string>
    <string name="site_guide">Site Guide</string>
    <string name="map_view">Map view</string>
    <string name="gallery_view">Gallery view</string>
    <string name="now">Now</string>
    <string name="past">1944</string>
    <string name="info">Site info</string>
    <string name="directions">Directions</string>
    <string name="title_activity_site">Site Information</string>
    <string name="time_warning">Opening time should be verified by calling or visiting website.</string>
    <string name="requires_google_apps">Please install Google Maps to use this feature.</string>
    <string name="visitor_center">Rosie the Riveter Visitor Center</string>
    <string name="monument">Rosie the Riveter Monument</string>
    <string name="richmond_museum">Richmond Museum of History</string>
    <string name="red_oak">SS Red Oak Victory</string>
    <string name="visitor_center_address1">1414 Harbour Way South, Suite #3000</string>
    <string name="visitor_center_address2">Richmond, CA 94804 </string>
    <string name="visitor_center_phone">(510) 232&#8211;5050</string>
    <string name="visitor_center_description1">National Park Service Visitor Center in the Ford Building Complex.</string>
    <string name="visitor_center_description2">Exhibits, films and information - the best introduction to the park.</string>
    <string name="visitor_center_hours">Open daily 10:00 to 5:00</string>
    <string name="visitor_center_hours2">Closed Thanksgiving, Christmas Day and New Years Day</string>
    <string name="visitor_center_website">http://www.nps.gov/rori/index.htm</string>
    <string name="visitor_center_latitude">37.9094628</string>
    <string name="visitor_center_longitude">-122.3573737</string>
    <string name="monument_address1">Intersection of Marina Bay Parkway and Melville Square</string>
    <string name="monument_address2">Richmond, CA 94804 </string>
    <string name="monument_phone"></string>
    <string name="monument_description1">Monument honors the contributions of the Rosies to the war effort.</string>
    <string name="monument_description2">Contains photos, quotes and a timeline.</string>
    <string name="monument_hours">Open all reasonable hours</string>
    <string name="monument_latitude">37.9156272</string>
    <string name="monument_longitude">-122.3463237</string>
    <string name="museum_address1">400 Nevin Avenue</string>
    <string name="museum_address2">Richmond, CA</string>
    <string name="museum_phone">(510) 235&#8211;7387</string>
    <string name="museum_description1">Explore the history of Richmond from early Native Americans to present through their exhibits and collections.</string>
    <string name="museum_description2">Not operated by National Park Service. Admission charged. Contact for curator-led tours.</string>
    <string name="museum_hours">Wednesday through Sunday, 1 pm to 4 pm</string>
    <string name="museum_hours2">Contact for holiday schedules</string>
    <string name="museum_website">http://www.richmondmuseum.org</string>
    <string name="museum_latitude">37.9365204354</string>
    <string name="museum_longitude">-122.365344883</string>
    <string name="red_oak_address1">1337 Canal Blvd., Berth 6A </string>
    <string name="red_oak_address2">Richmond, CA 94804 </string>
    <string name="red_oak_phone">(510) 237&#8211;2933</string>
    <string name="red_oak_description1">Restored Victory ship - only vessel built by the Richmond Kaiser Shipyards being restored.</string>
    <string name="red_oak_description2">Not operated by National Park Service. Admission charged.</string>
    <string name="red_oak_hours">10:00am to 3:00pm Tuesdays, Thursdays, Saturday and Sundays. Self guided or docent-led tour. Last docent tour at 2:00pm</string>
    <string name="red_oak_hours2">Closed holidays and when raining - contact to confirm opening hours.</string>
    <string name="red_oak_website">http://www.richmondmuseum.org</string>
    <string name="red_oak_latitude">37.904791622</string>
    <string name="red_oak_longitude">-122.36429328 </string>
    <string name="website">Website</string>
    <string name="rosie_full_name1">Rosie the Riveter WWII Home Front</string>
    <string name="rosie_full_name2">National Historical Park</string>
    <string name="rosie_full_name3">Richmond, CA</string>
    <string name="acknowledgements2">Acknowledgements</string>
    <string name="author">App by Bradley Justice.</string>
    <string name="overhead_photos">Overhead photos were provided by the Richmond Museum of history. Many thanks for their assistance.</string>
    <string name="other_photos">Other historical photos are from the National Park Service Rosie the Riveter archives.</string>
    <string name="site_photos">Modern site photos are from various website postings.</string>
    <string name="take_down2">I believe that no media used in this app violates copyright laws. If you believe that there is a violation, please email me at bradley.justice@blueverdi.com and the item will be removed.</string>
    <string name="rosie_song">The Rosie the Riveter song is from archive.org.</string>
    <string name="swipe_screen">Swipe screen to turn page.</string>
    <string name="getting_map">Getting map - please wait.</string>
    <string name="atchison_village">Atchison Village</string>
    <string name="atchison_address1">Bounded by MacDonald Ave, Ohio St, 1st St &amp; Garrard Blvd</string>
    <string name="atchison_address2">Richmond, CA 94801</string>
    <string name="atchison_phone"></string>
    <string name="atchison_description1">WWII housing built for Kaiser workers consisting of 162 buildings.</string>
    <string name="atchison_description2">One of a handful of such housing projects remaining in the US today.</string>
    <string name="atchison_hours">Privately owned housing, no interior viewing.</string>
    <string name="atchison_hours2"></string>
    <string name="atchison_website"></string>
    <string name="atchison_latitude">37.9340911</string>
    <string name="atchison_longitude">-122.371638</string>
    <string name="requires_network">Requires an Internet connection.</string>
    <string name="copyright1">Copyright \u00A9 2014 - 2017</string>
    <string name="copyright2">by blueVerdi</string>
    <string name="more">More</string>
    <string name="beyond_rosie">Beyond Rosie - more WWII sites</string>
    <string name="hornet">USS Hornet</string>
    <string name="battery_townsley">Battery Townsley</string>
    <string name="presidio_officers_club">Presidio Officers Club</string>
    <string name="bay_model">Bay Model Visitor Center</string>
    <string name="jeremiah_address2">San Francisco, CA 94133</string>
    <string name="jeremiah_phone">(415) 544&#8211;0100</string>
    <string name="jeremiah_description1">One of two remaining fully functional Liberty ships.</string>
    <string name="jeremiah_description2">Not operated by National Park Service. Admission charged.</string>
    <string name="jeremiah_hours">Open daily 9am to 4pm for tours. Call for reservations.</string>
    <string name="jeremiah_hours2">Closed Thanksgiving, Christmas Day and New Years Day, when in dry dock or on cruises.</string>
    <string name="jeremiah_website">http://www.ssjeremiahobrien.org/</string>
    <string name="richmond_museum_thanks">Arial photos courtesy Richmond Museum of History</string>
    <string name="nps_thanks">Other historical photos courtesy National Park Service and Kaiser Permanente and Bancroft Library.</string>
    <string name="thanks">Thanks to all.</string>
    <string name="email_address">bradleypjustice@gmail.com</string>
    <string name="ok">OK</string>
    <string name="do_not_show">Do not show again.</string>
    <string name="re_enable">(Hint can be re-enabled from the menu button.)</string>
    <string name="version">Version 3.2</string>
    <string name="yard1">Yard #1 photo</string>
    <string name="yard2">Yard #2 photo</string>
    <string name="yard3">Yard #3 photo</string>
    <string name="yard4">Yard #4 photo</string>
    <string name="disclaimer">THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.\n\nPortions of this software copyright 2012 by Carl Bauer. Additional portions authored
        by Alessandro Crugnola. These are distributed under the Apache license:\n\nUnless
        required by applicable law or agreed to in writing, Licensor provides
        the Work (and each Contributor provides its Contributions) on an &quot;AS IS&quot; BASIS, WITHOUT WARRANTIES
        OR CONDITIONS OF ANY KIND, either express or implied, including, without limitation,
        any warranties or conditions of TITLE, NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS
        FOR A PARTICULAR PURPOSE. You are solely responsible for determining the appropriateness of
        using or redistributing the Work and assume any risks associated with Your exercise of
        permissions under this License.\n\nPortiona authored by Moritz &quot;Moss&quot; Wundke and
        distributed under the new BSD license:\n\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT
        HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT
        NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
        PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
        FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
        (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
        DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
        LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
        ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY
        OF SUCH DAMAGE.</string>
    <string name="map_hints">Shipyard map hints</string>
    <string name="full_screen_hint">Tap on the map for full screen image. Return from full screen mode using the device back button.</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="our_privacy_policy1">We do not collect or store any of your private information.</string>
    <string name="our_privacy_policy2">We do not transmit any information about you from your mobile device with one exception:
    when you request directions we transmit your current location to Google to generate a route to your
    desired location. We make no additional use of this information.</string>
</resources>