<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_fragment"    
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
	    android:id="@+id/buttonBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_alignParentBottom="true"
    	android:orientation="vertical" 
    	android:background="#0996d4">
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="2dp"
		    android:layout_gravity="bottom"
		    android:background="#ff000000"/>   
	    <LinearLayout
	    	android:id="@+id/buttons"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	    	android:orientation="horizontal" 
		    android:layout_gravity="bottom"
	    	style="?android:attr/buttonBarStyle">
	        <Button 
	            android:id="@+id/acknowledgementButton"
		        style="?android:attr/buttonBarButtonStyle"
	            android:text="@string/acknowledgements2"
	        	android:layout_weight="3"
	            android:layout_width="0dp" 
	            android:background="#ffffffff"
				android:layout_height="wrap_content"
	            android:gravity="center"
	            android:layout_gravity="left"  />
			<Button
				android:id="@+id/privacyButton"
				style="?android:attr/buttonBarButtonStyle"
				android:text="@string/privacy"
				android:layout_weight="2"
				android:layout_width="0dp"
				android:background="#ffffffff"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_gravity="right"  />
	    </LinearLayout>
	</LinearLayout>     
    <RelativeLayout
	    android:layout_above="@+id/buttonBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
    	android:orientation="vertical" 
    	android:paddingBottom="20dp"
    	android:background="@drawable/grey_background">
	    <ImageView
	        android:id="@+id/aboutImageView"
	        android:gravity="center"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	        android:layout_gravity="center"
	        android:layout_width="match_parent"
			android:scaleType="fitCenter"	
			android:background="@drawable/grey_background"        
			android:layout_height="match_parent"/>
        	    
	    <LinearLayout
		    android:id="@+id/aboutTextBlock"
    		android:layout_alignTop="@id/aboutImageView"
    		android:layout_alignBottom="@id/aboutImageView"
   			android:background="#0000"         	
			android:visibility="invisible"   			
			android:layout_width="match_parent"
	        android:layout_height="match_parent" 
	        android:paddingTop="15dp"
	    	android:orientation="vertical" >
		    <TextView
		        android:text="@string/rosie_full_name1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
			    android:layout_gravity="center_horizontal"
		        android:textColor="#ffbf00"
				android:textStyle="bold"		  
				android:shadowColor="#000"
			    android:shadowDx="0"
			    android:shadowDy="0"
			    android:shadowRadius="1.5"      
			    android:textAppearance="?android:attr/textAppearanceLarge" />
		    <TextView
		        android:text="@string/rosie_full_name2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dp"
		        android:layout_gravity="center_horizontal"
		        android:textColor="#ffbf00"
				android:textStyle="bold"		  
				android:shadowColor="#000"
			    android:shadowDx="0"
			    android:shadowDy="0"
			    android:shadowRadius="1.5"      
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		    <TextView
		        android:text="@string/rosie_full_name3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dp"
		        android:layout_gravity="center_horizontal"
		        android:textColor="#ffbf00"
				android:textStyle="bold"		  
				android:shadowColor="#000"
			    android:shadowDx="0"
			    android:shadowDy="0"
			    android:shadowRadius="1.5"      
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		    <TextView
		        android:text="@string/author"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:layout_gravity="center_horizontal"
		        android:textColor="#ffbf00"
				android:textStyle="bold"		  
				android:shadowColor="#000"
			    android:shadowDx="0"
			    android:shadowDy="0"
			    android:shadowRadius="1.5"      
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    <TextView
		        android:text="@string/version"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dp"
		        android:layout_gravity="center_horizontal"
		        android:textColor="#ffbf00"
				android:textStyle="bold"		  
				android:shadowColor="#000"
			    android:shadowDx="0"
			    android:shadowDy="0"
			    android:shadowRadius="1.5"      
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    <TextView
		        android:id="@+id/emailAddress"
		        android:clickable="true"
		        android:text="@string/email_address"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dp"
		        android:layout_gravity="center_horizontal"
		        android:textColor="#ffbf00"
				android:textStyle="bold"		  
				android:shadowColor="#000"
			    android:shadowDx="0"
			    android:shadowDy="0"
			    android:shadowRadius="1.5"      
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    <TextView
		        android:text="@string/copyright1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dp"
		        android:layout_gravity="center_horizontal"
		        android:textColor="#ffbf00"
				android:textStyle="bold"		  
				android:shadowColor="#000"
			    android:shadowDx="0"
			    android:shadowDy="0"
			    android:shadowRadius="1.5"      		        
		        android:textAppearance="?android:attr/textAppearanceMedium" />
			<TextView
				android:text="@string/copyright2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="3dp"
				android:layout_gravity="center_horizontal"
				android:textColor="#ffbf00"
				android:textStyle="bold"
				android:shadowColor="#000"
				android:shadowDx="0"
				android:shadowDy="0"
				android:shadowRadius="1.5"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>
	</RelativeLayout>
</RelativeLayout>
